--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       margin:0px;asdfasdfadsfasdfasdf
       padding:0px;
     }
-    
-    #octocat {
+    sadfasdfadsfadsfasdf
       display: block;
       width:384px;
       margin: 50px auto;
